--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
 PUBLIC_URL = http://localhost:3000
 REACT_APP_API_URL = http://localhost:3005
+REACT_APP_IMG_URL = http://localhost:3005/uploads
+```
